# Syntari

./: .bandit  .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_ITEMS.md  BRANCH_PROTECTION_SETUP_INSTRUCTIONS.md  BUILD_SYSTEM_IMPROVEMENTS.md  BYTECODE_FORMAT.md  CHAIN_OF_RECORD.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  DEV_TOOLS.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  Makefile  NEXT_STEPS.md  OPEN_PR_ERRORS_SUMMARY.md  PACKAGE_MANAGER.md  PERFORMANCE_PROFILING.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PRODUCTION_CHECKLIST.md  PROGRESS_REPORT_PERFORMANCE.md  PROGRESS_REPORT_PHASE4.md  PROGRESS_REPORT_PHASE5.md  PROGRESS_REPORT_PKG.md  PR_ERRORS_ANALYSIS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v0.4.0.md  ROADMAP_VISUAL.md  (+38 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  COPILOT_SECURITY_SETUP.md  COPILOT_SETUP.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  SECURITY_COMPLIANCE.md  WORKFLOW_SECURITY.md  branch-protection-rules.md  copilot-instructions.md  copilot-setup-steps.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  security.md
.github/rulesets/: develop-branch-protection.yml  main-branch-protection.yml
.github/workflows/: README.md  auto-label.yml  benchmarks.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-scan.yml  docker.yml  docs.yml  optimized-ci.yml  pr-checks.yml  release-automation.yml  release.yml  sbom.yml  scorecard.yml  security-audit.yml  security-policy-enforcement.yml  stale-management.yml
benchmarks/: README.md  array_ops.syn  benchmark_results_20260126_162633.json  benchmark_results_20260126_162643.json  factorial.syn  fibonacci.syn  nested_loops.syn  prime_check.syn  run_benchmarks.py
docs/: ROADMAP.md
examples/: README.md  arithmetic.syn  classes.syn  control_flow.syn  error_handling.syn  functions.syn  networking.syn  variables.syn
scripts/: README.md  install-pre-commit-hooks.sh  quick-setup.sh  setup-branch-protection.py
src/: __version__.py
src/compiler/: __init__.py  bytecode.py  bytecode_v2.py
src/core/: __init__.py  ai.py  chain_of_record.py  errors.py  logging.py  net.py  system.py
src/interpreter/: interpreter.py  lexer.py  main.py  nodes.py  parser.py
src/pkg/: __init__.py  cache.py  cli.py  manifest.py  registry.py  resolver.py
src/runtime/: __init__.py  vm_v2.py
src/tools/: __init__.py  debugger.py  lsp.py  profiler.py
src/vm/: __init__.py  runtime.py
syntari/: __init__.py  api.py
tests/: test_api.py  test_bytecode.py  test_chain_of_record.py  test_classes.py  test_core_ai.py  test_core_system.py  test_debugger.py  test_error_handling.py  test_errors.py  test_interpreter.py  test_interpreter_advanced.py  test_lexer.py  test_logging.py  test_lsp.py  test_main.py  test_networking.py  test_nodes.py  test_parser.py  test_pkg_cache.py  test_pkg_cli.py  test_pkg_manifest.py  test_pkg_registry.py  test_pkg_resolver.py  test_profiler.py  test_security.py  test_vm_runtime.py  test_web_repl.py  test_web_security.py
web/: QUICKSTART.md  README.md  admin.html  app.py  index.html  security.py
