[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntari"
version = "0.4.0"
description = "AI-integrated, type-safe, functional-first programming language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LicenseRef-Proprietary"}
authors = [
    {name = "DeuOS, LLC", email = "legal@deuos.io"}
]
keywords = ["programming-language", "compiler", "interpreter", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=26.0.0",
    "flake8>=7.0.0",
    "mypy>=1.19.0",
]

[project.optional-dependencies]
web = [
    "aiohttp>=3.13.0",
    "aiohttp-cors>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Adahandles/Syntari"
Source = "https://github.com/Adahandles/Syntari"

[project.scripts]
syntari = "src.interpreter.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "^nodes\\.py$",
    "^lexer\\.py$",
    "^parser\\.py$",
    "^interpreter\\.py$",
    "^runtime\\.py$",
    "^bytecode\\.py$",
    "^ai\\.py$",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
